--- a/code/style.css
+++ b/code/style.css
@@ -5,19 +5,20 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
   background: beige;
-  color:black
+  color: black;
 }
 
 .flex-parent {
-  background:darkslategray;
+  background: darkslategray;
   color: gold;
   margin: 5px;
-  padding: 10px;
+  padding: 5px;
   border: black solid 4px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: center; 
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 300px;
 }
@@ -25,41 +26,17 @@ html {
 .flex-child {
   margin: 5px;
   padding: 10px;
-  width: 30%;
+  width: 100%;
   font-size: 20px;
   display: flex;
 }
 
 .flex-logo {
-  margin: 5px;
-  padding: 10px;
-  width: 20%;
+  display: none;
 }
 
 .flex-child1 {
-  margin: 5px;
-  padding: 10px;
-  width: 50%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.navigation-bar a:link, a:visited{
-  color: gold;
-  padding: 8px 12px;
-  border-bottom: black solid 2px;
-  text-decoration: none;
-  text-align: center;
-}
-
-.navigation-bar a:hover {
-  color: midnightblue;
-}
-
-.navigation-bar {
-  font-size: 16px;
-  float: inline-end;
+  display: none;
 }
 
 .big-news {
@@ -68,10 +45,10 @@ html {
   padding: 10px;
   border: black solid 4px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  text-align: center;
+  justify-content: center;
   width: 100%;
 }
 
@@ -81,13 +58,14 @@ html {
 }
 
 .big-news-text {
- margin: 5px;
- width: 70%;
- text-align: center;
- font-size: 14px;
+  margin: 5px;
+  width: 70%;
+  text-align: center;
+  font-size: 14px;
 }
 
-.big-news a:link, a:visited {
+.big-news a:link,
+a:visited {
   color: black;
   text-decoration: none;
 }
@@ -96,15 +74,11 @@ html {
   color: deeppink;
 }
 
-.smaller-headline {
-  font-size: 20px;
-}
-
-.shadow { 
-  width: 100%;
-  height: 200px;
+.shadow {
+  width: 80%;
+  height: auto;
   border-radius: 25px;
-  box-shadow: 0 0 20px black;
+  box-shadow: 0 0 20px 0 black;
 }
 
 .grid-container {
@@ -112,12 +86,10 @@ html {
   margin: 5px;
   padding: 10px;
   border: black solid 4px;
-  align-content: center;
-  justify-content: space-around;
   display: grid;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width:100%;
+  grid-template-columns: 1fr;
+  grid-gap: 10px;
+  width: 100%;
   font-size: 20px;
 }
 
@@ -132,13 +104,14 @@ html {
   height: auto;
 }
 
-.grid-item a:link, a:visited {
+.grid-item a:link,
+a:visited {
   color: black;
   text-decoration: none;
 }
 
 .grid-item a:hover {
-  color:deeppink;
+  color: deeppink;
 }
 
 .footer {
@@ -173,50 +146,6 @@ html {
   height: 150px;
 }
 
-@media (max-width: 666px) {
-  body {
-    flex-direction: row;
-    flex-wrap: wrap;
-  } 
-
-  .flex-parent {
-    padding: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;   
-  }
-
-  .flex-child {
-    font-size: 20px;
-  }
-
-  .flex-logo {
-    display: none;
-  }
-
-  .flex-child1 {
-    display: none;
-  }
-
-  .big-news {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-  }
-
-  .grid-container {
-    grid-template-columns: 1fr;
-    grid-gap: 5px;
- }
-
- .shadow {
-   width: 80%;
-   height: auto;
- }
-}
-
 @media (min-width: 667px) and (max-width: 1024px) {
   body {
     flex-direction: row;
@@ -227,31 +156,59 @@ html {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+  }
+
+  .flex-child {
+    width: 40%;
   }
 
   .flex-logo {
     display: none;
   }
 
+  .flex-child1 {
+    margin: 5px;
+    padding: 10px;
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
   .navigation-bar {
-    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    flex-wrap: nowrap;
+    justify-content: center;
     align-items: center;
+    font-size: 16px;
+  }
+
+  .navigation-bar a:link,
+  a:visited {
+    color: gold;
+    padding: 8px 12px;
+    border-bottom: black solid 2px;
+    text-decoration: none;
+    text-align: center;
+  }
+
+  .navigation-bar a:hover {
+    color: midnightblue;
   }
 
   .grid-container {
     grid-template-columns: 1fr 1fr;
     grid-gap: 5px;
- }
+  }
 
- .shadow {
-   width: 100%;
-   height: 300px;
- }
+  .shadow {
+    width: 100%;
+    height: 300px;
+  }
 }
 
 @media (min-width: 1025px) {
@@ -259,15 +216,93 @@ html {
     flex-direction: row;
   }
 
-.flex-parent {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.grid-container {
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 5px;
-}
+  .flex-parent {
+    background: darkslategray;
+    color: gold;
+    margin: 5px;
+    padding: 10px;
+    border: black solid 4px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+  }
+
+  .flex-child {
+    margin: 5px;
+    padding: 10px;
+    width: 30%;
+    font-size: 20px;
+    display: flex;
+  }
+
+  .flex-logo {
+    display: inline-flex;
+    margin: 5px;
+    padding: 10px;
+    width: 20%;
+  }
+
+  .flex-child1 {
+    display: inline-block;
+    margin: 5px;
+    padding: 10px;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .navigation-bar a:link,
+  a:visited {
+    color: gold;
+    padding: 8px 12px;
+    border-bottom: black solid 2px;
+    text-decoration: none;
+    text-align: center;
+  }
+
+  .navigation-bar a:hover {
+    color: midnightblue;
+  }
+
+  .navigation-bar {
+    font-size: 16px;
+    float: inline-end;
+  }
+
+  .big-news {
+    background: darkslategray;
+    margin: 5px;
+    padding: 10px;
+    border: black solid 4px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+
+  .grid-container {
+    background: darkslategray;
+    margin: 5px;
+    padding: 10px;
+    border: black solid 4px;
+    align-content: center;
+    justify-content: space-around;
+    display: grid;
+    width: 100%;
+    font-size: 20px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 5px;
+  }
+
+  .shadow {
+    width: 100%;
+    height: 200px;
+  }
 }
