--- a/code/style.css
+++ b/code/style.css
@@ -13,8 +13,7 @@ body {
     color: #fff;
     font-family: "Titillium Web", "Helvetica Neue", "Helvetica", Arial, sans-serif;
     margin: 0;
-    background-size: 400%;
-    animation: bg-animation 3s infinite alternate;
+    background-size: 400%;    animation: bg-animation 3s infinite alternate;
 }
 
 @keyframes bg-animation {
@@ -35,7 +34,7 @@ body {
 
 /*** Header ***/
 
-header {
+.header {
     background-color: #2a2c36;
     height: 70px;
     display: flex;
@@ -43,20 +42,15 @@ header {
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    
-
 }
 
-header img {
+.logo-image {
     width: 80px;
     margin-left: 16px;
-       
-
 }
 
-nav {
+.nav-bar {
     display: none;
-
 }
 
 .nav-hamburger-container{
@@ -106,16 +100,12 @@ nav {
 .hamburger-menu div {
     width: 30px;
     height: 5px;
-    background: #fff;
-    
-    
+    background: #fff;   
 }
 
 .hamburger-menu-img-container {
     display: flex;
     flex-direction: row;
-
-
 }
 
 
@@ -141,17 +131,13 @@ nav {
     margin-bottom: 32px;
     position: relative;
     z-index: 1;
-    box-shadow: 6px 5px 5px #4d4f54;
-       
+    box-shadow: 6px 5px 5px #4d4f54;      
 }
-
-
 
 .big-news-card .news-image{
     width: 100%;
     height: 230px;
-    flex-grow: 1;
-       
+    flex-grow: 1;      
 }
 
 .news-article{
@@ -183,7 +169,6 @@ nav {
 
 
 /*** Sub news ***/
-
 .sub-news-container {
     display: flex;
     justify-content: space-between;
@@ -205,8 +190,7 @@ nav {
 }
 
 .sub-news-card .news-image{
-    width: 100%;
-   
+    width: 100%;  
 }
 
 .sub-news-header{
@@ -218,7 +202,6 @@ nav {
 
 
 /*** Footer ***/
-
 .footer {
     background: #2a2c36;
     color: #fff;
@@ -227,9 +210,7 @@ nav {
     text-align: center;
     padding-top: 12px;
     font-size: 14px;
-
 }
-
 
 /***Media Queries***/
 
@@ -238,7 +219,8 @@ nav {
     width: 768px;
 }
 
-nav {
+/*** Header ***/
+.nav-bar {
     display: flex;
 }
 
@@ -246,7 +228,7 @@ nav {
     display: none;
 }
 
-header img {
+.logo-image {
     margin-right: 30px;
 }
 
@@ -257,7 +239,6 @@ header img {
     display:flex;
 }
 
-
 .navigation-element {
     font-size: 14px;
 }
@@ -267,6 +248,7 @@ header img {
     color: #fb3222;
 }
 
+/*** Big news ***/
 .big-news-container {
     display: flex;
     justify-content: space-between;
@@ -287,11 +269,11 @@ header img {
     line-height: 20px;
 }
 
+/*** Sub news ***/
 .sub-news-container {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    
+    flex-wrap: wrap;    
 }
 
 .sub-news-card {
@@ -312,8 +294,6 @@ header img {
 .last-news .sub-news-card{
     margin-right: 20px;
 }
-
-
 }
 
 @media (min-width: 1024px) {
@@ -321,6 +301,7 @@ header img {
     min-width: 1024px;
 }
 
+/*** Header ***/
 .logo {
     font: 35px bold;
     padding: 0 40px;
@@ -330,12 +311,12 @@ header img {
     font-size: 16px;
 }
 
+/*** Big news ***/
 .big-news-container {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;    
 }
-
 
 .big-news-card{
     height: 230px;
@@ -344,22 +325,25 @@ header img {
     grid-template-columns: 1fr 1fr;   
 }
 
+.news-article{
+    padding-top: 20px;
+}
+
 .news-text{
     display:block;
-    margin-top:30px;
+    margin-top:50px;
     line-height: 20px;
 }
 
-
+/*** Sub news ***/
 .sub-news-card {
     width: 22.5%;
     margin-right: 24px;
     height: 205px;
-
 }
 
 .last-news{
     display:flex;
     justify-content: center;
-   }
+}
 }
