--- a/code/style.css
+++ b/code/style.css
@@ -325,13 +325,13 @@ body {
     grid-template-columns: 1fr 1fr;   
 }
 
-.news-article{
-    padding-top: 20px;
+.big-news-card .news-article{
+    padding-top: 40px;
 }
 
 .news-text{
     display:block;
-    margin-top:50px;
+    margin-top:70px;
     line-height: 20px;
 }
 
