--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,185 @@
-html {
-  background: #0025ff;
-  color: #fff;
+/* BODY */
+
+body {
+  background: rgb(231, 103, 89);
+  color: rgb(76, 223, 76);
+  font-family: 'Potta One';
+  margin: 0;
+}
+
+/* HEADER */
+
+header {
+  background: white;
+  width: 100%;
+  height: 100px;
+  display: flex; 
+  align-items: center;
+  padding: 0 16px;
+}
+
+header img {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  margin-right: 24px;
+}
+
+nav {
+  display: none;
+}
+
+nav a {
+  color:  rgb(76, 223, 76);
+  text-decoration: none;
+  margin-left: 50px;
+}
+
+/* NEWS */
+
+.news-page {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.news-page img {
+  width: 100%;
+  height: auto;
+}
+
+.news-card1 {
+  width: 100%;
+  height: 100px;
+  background: white;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.news-card2 {
+  width: 90%;
+  height: 100px;
+  background: white;
+  color: black;
+  margin: 10px;
+  border-radius: 24px;
+}
+
+.news-card3 {
+  width: 90%;
+  height: 100px;
+  background: white;
+  color: black;
+  margin: 10px;
+  border-radius: 24px;
+}
+
+.news-card4 {
+  width: 90%;
+  height: 100px;
+  background: white;
+  color: black;
+  margin: 10px;
+  border-radius: 24px;
+}
+
+.news-card5 {
+  width: 90%;
+  height: 100px;
+  background: white;
+  color: black;
+  margin: 10px;
+  border-radius: 24px;
+}
+
+.news-card6 {
+  width: 90%;
+  height: 100px;
+  background: white;
+  color: black;
+  margin: 10px;
+  border-radius: 24px;
+}
+
+.news-card7 {
+  width: 90%;
+  height: 100px;
+  background: white;
+  color: black;
+  margin: 10px;
+  border-radius: 24px;
+}
+
+/* MEDIA QUERIES */
+
+
+@media (min-width: 768px) {
+  .news-page {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .news-card2 {
+    width: 45%;
+  }
+
+  .news-card3 {
+    width: 45%;
+  }
+
+  .news-card4 {
+    width: 45%;
+  }
+
+  .news-card5 {
+    width: 45%;
+  }
+
+  .news-card6 {
+    width: 45%;
+  }
+
+  .news-card7 {
+    width: 45%;
+  }
+
+}
+
+@media (min-width: 992px) {
+  nav {
+    display: inline-block;
+    margin-left: 750px;
+  }
+
+  .news-card2 {
+    width: 30%;
+  }
+
+  .news-card3 {
+    width: 30%;
+  }
+
+  .news-card4 {
+    width: 30%;
+  }
+
+  .news-card5 {
+    width: 30%;
+  }
+
+  .news-card6 {
+    width: 30%;
+  }
+
+  .news-card7 {
+    width: 30%;
+  }
+
 }
