--- a/code/style.css
+++ b/code/style.css
@@ -53,14 +53,25 @@ body {
   text-decoration: none;
 }
 
+.news-section {
+  margin: 0 0 0 5px;
+  font-size: 10px;
+  background-color: lavender;
+}
+
 /** BIG NEWS **/
+
+.big-news {
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+}
 
 .news-card-big {
   width: 100%;
   height: 320px;
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
   background-color: #0678B4;
 }
 
@@ -71,8 +82,9 @@ body {
 
 .big-news-text {
   color: #fff;
-  padding: 5px 15px;
-  font-size: 15px;
+  /* padding: 5px;
+  font-size: 15px; */
+  margin: auto;
 }
 
 /** OTHER-NEWS **/
@@ -86,21 +98,20 @@ body {
 .news-card {
   width: 100%;
   height: 320px;
-  background: #999;
-  margin-bottom: 5px;
   display: flex;
   flex-direction: column;
+  background-color: #C0E2F2;
 
 }
 
 .news-card-pic {
-  width: 100%;
   height: 80%;
   /* object-fit: contain; */
 }
 
 .news-card-text {
-  height: 20%;
+  text-align:center;
+  margin: auto;
 }
 
 /** RESPONSIVENESS **/
@@ -110,13 +121,8 @@ body {
   .navigation-container {
     display: none;
   }
-
-  .news-card-type {
-    display: none;
-  }
-
   .news-card {
-    background-color: lightgray;
+    /* width: 767px; */
   }
 }
 
@@ -138,70 +144,49 @@ body {
     margin-left: auto;
   }
 
-  .news-card-big {
+  .big-news {
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
-
-  .news-card-pic-big {
+  
+  .news-card-big {
     width: 50%;
-    height: 100%;
   }
 
   .big-news-text {
     text-align:center;
-    font-size: 20px;
-    padding: 100px 0px;
   }
 
   .other-news {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-
-  .news-card-type {
-    width: 45%;
-    height: 320px;
-    background: green;
-    margin-bottom: 5px;
-    display: flex;
-    flex-direction: column;
+    justify-content: center;
   }
 
   .news-card {
-    background-color: green;
-    width: 45%;
-  }
-
-  .big-news {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 30px;
+    width: 50%;
   }
 }
   /** LAPTOP **/
 
   @media (min-width: 992px) {
-    .news-card-type {
-      width: 22.5%;
-      background-color: yellow;
+
+    .big-news {
     }
 
-    .news-card {
-    background-color: yellow;
-    width: 22.5%;
-    }
-
-    .news-card-pic-big {
-    width: 50%;
-    height: 100%;
+    .news-card-big {
+      width: 49%;
+      margin-right: 5px;
     }
 
     .big-news-text {
-      text-align:center;
-      font-size: 30px;
-      padding: 100px 0px;
+      font-size: 20px;
+    }
+
+    .news-card {
+    width: 24.3%;
+    margin-right: 5px;
     }
 
   }
