Har gjort ändringar i phone version

--- a/code/style.css
+++ b/code/style.css
@@ -489,6 +489,11 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
   .rights {
     font-size: 28px;
     align-items: center;
+    width: 400px;
+  }
+
+  .footer {
+    height: 50px;
   }
   
 }
@@ -599,6 +604,16 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
 
   .text {
     font-size: 48px;
+  }
+
+  .rights {
+    font-size: 54px;
+    align-items: center;
+    width: 700px;
+  }
+
+  .footer {
+    height: 90px;
   }
  
 }
