--- a/code/style.css
+++ b/code/style.css
@@ -82,24 +82,22 @@
     padding:20px 20px 30px 20px;
     border:1px solid black;
     box-shadow: 5px 10px 10px grey;
-    border-radius: 1px;;
+    border-radius: 1px;
+    -webkit-filter: grayscale(100%); 
 }
 
 .big-news-img:hover {
     padding:20px 20px 30px 20px;
     border:1px solid black;
-    box-shadow: 5px 10px 10px black;
+    box-shadow: 18px 10px 18px black;
+    -webkit-filter: grayscale(0%);
 }
-.text-on-photo {
+.text-on-photo-big {
     font-size: 50px;
     margin-block-start: 10px;
     margin-block-end: 1px;
-    font-family:'Indie Flower', cursive;
-    
+    font-family:'Indie Flower', cursive;    
 }
-
-
-
 
 /**** SMALL NEWS ****/
 
@@ -110,26 +108,23 @@
 }
   
 .small-news a {
-    border: 2px solid black;
     display:flex;
     flex-direction: column;
     background: whitesmoke;  
     margin: 10px 20px;    
     text-align: center;  
     width: 90%;  
-     
-    
-}
+    border:2px solid black;    
+ }
 
 .small-news a:hover {
 
-    box-shadow: 18px 0 18px grey;
+    box-shadow: 18px 10px 18px grey;   
   
 }
 
-    .small-news img {
-    padding-top: 10px;
-    width:500px;    
+    .small-news img {    
+    width:100%;    
 }
 
 
@@ -192,7 +187,7 @@
         
     }
     .small-news a img {
-        width:60%;
+        width:100%;
        
     }
 
