--- a/code/style.css
+++ b/code/style.css
@@ -8,10 +8,11 @@ body {
 
 h1 {
   margin-left: 20px;
+  font-size: 50px;
 }
 
 h2 {
-  font-size: 70px;
+  font-size: 30px;
   margin:20px auto 10px;
 }
 
@@ -39,17 +40,14 @@ article p {
   background: #2B879E;
   height: 100px;
   width: 100%;
-  margin: 0;
   display: flex;
   align-items: center;
-  padding: 0 16px  
+  justify-content: left;
 }
-
-
 
 nav {
   display: none;
-}
+} 
 
 nav a {
   color: #fff;
@@ -67,7 +65,8 @@ nav a:hover {
   height: 30px;
   flex-direction: column;
   justify-content: space-between;
-  margin-right: 20px;
+  margin:0 20px;
+  cursor: pointer;
   
 }
 
@@ -76,13 +75,12 @@ nav a:hover {
   height: 5px;
   background: #fff;
   border-radius: 5px;
-}
+} 
 
 /*** BIG NEWS ***/
 
 .big-news {
   width:100%;
-  padding: 30px 16px;
   display: flex;  
   flex-direction: column;
 }
@@ -95,8 +93,6 @@ nav a:hover {
 
 .main-big-news img {
   width: 90%;
-  /*width: 550px;
-  /*height: 550px;*/ 
   margin: 20px;
   border: solid 2px #CDA483;
 }
@@ -105,16 +101,14 @@ nav a:hover {
   text-align: center;
   background: rosybrown;
   width:90%;
-  /*width: 550px;
-  /*height: 500px;*/
   margin: 20px;
   border: solid 2px #CDA483;
+
 }
 
 /*** SMALL NEWS ***/
 
 .container-small-news {
-  padding: 30px 16px;
   width: 100%;
 }
 
@@ -208,13 +202,19 @@ nav a:hover {
   }
   
   nav {
-    display:inline-block;
+    display: inline-block;
   }
-
   .hamburger {
       display: none;  
   }
+
+  .h1 {
+    font-size: 70px;
+  }
   
+  .h2 {
+    font-size: 50px;
+  }
   .news {
     width: 40%;
   }
@@ -243,6 +243,13 @@ nav a:hover {
     width: 40%;
   }
 
+  .h1 {
+    font-size: 90px;
+  }
+   
+  .h2 {
+    font-size: 70px;
+  }
 
   .news {
     flex-wrap: wrap;
