checked code guidelines - finished

--- a/code/style.css
+++ b/code/style.css
@@ -42,7 +42,6 @@ body {
   grid-area: logo;
   padding: 15px;
   margin: 10px 0 0 40px;
-  
 }
 
 h1.title-name {
@@ -145,6 +144,10 @@ img.big-news {
 
 img.small-news {
   width: 350px;
+}
+
+.copyright {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /*Styling for tablet and small desktop*/
