--- a/code/style.css
+++ b/code/style.css
@@ -19,18 +19,25 @@ header {
   flex-flow: wrap;
   border-top: 25px solid #f75590;
   border-bottom: 25px solid #f75590;
+  
 }
 
 .left {
   background: pink;
   width: 40%;
   display: flex;
-  align-content: center;
+  align-items: center;
 }
 
-.left .logo {
-  display: block;
-  height: 10px;
+.left .logo img {
+  width: 80%;
+  margin-left: .5rem;
+  
+}
+
+.left .nameplate img {
+  width: 90%;
+  margin-right: 2rem;
 }
 
 
@@ -39,7 +46,12 @@ header {
   width: 20%;
   display: flex;
   justify-content: center;
-  align-self: center;
+  align-items: center;
+  
+}
+
+.middle .logo img {
+  width: 60%;
 }
 
 .right {
