--- a/code/style.css
+++ b/code/style.css
@@ -24,6 +24,13 @@ html {
 .news-card {
     width: 100%;
     height: 100%;
-    background: green;
-    margin: 5px;
+    background: pink;
+    color: black;
+    margin-bottom: 20px;
+}
+
+@media (max-with:767px) {
+    .news-card {
+        background: green;
+    }
 }
