--- a/code/style.css
+++ b/code/style.css
@@ -7,14 +7,16 @@
 }
 
 html {
-  background-image: url("/images/material-birchwood.svg");
   color: rgb(43, 36, 23);
   height: 100%;
+  width: 100vw;
+  overflow: hidden;
 }
 
 
 body {
   height: 100%; 
+  background-image: url("/images/material-birchwood.svg");
 }
 
 .container {
